--- a/app/scss/_head.scss
+++ b/app/scss/_head.scss
@@ -23,32 +23,7 @@
           display: flex;
           align-items: center;
           margin-right:85px;
-          li{
-            border-top:2px solid transparent;
-            border-bottom:2px solid transparent;
-            list-style: none;
-            margin: 0 15px;
-            transition: 0.3s;
-            a{
-              color: #ffffff;
-              font-family: Roboto;
-              font-size: 18px;
-              font-weight: 700;
-              text-transform: uppercase;
-              line-height: 80px;
-              display: block;
-              transition: 0.3s;
-            }
-          &:hover{
-            border-top:2px solid #a3c2d4;
-            border-bottom:2px solid #a3c2d4;
-            a{
-              color: #a3c2d4;
-            }
-          }
-          }
 
-        }
       }
 
     }
@@ -58,6 +33,33 @@
 #nav-icon2{
   display: none;
 }
+  li{
+    border-top:2px solid transparent;
+    border-bottom:2px solid transparent;
+    list-style: none;
+    margin: 0 15px;
+    transition: 0.3s;
+    a{
+      color: #ffffff;
+      font-family: Roboto;
+      font-size: 18px;
+      font-weight: 700;
+      text-transform: uppercase;
+      line-height: 80px;
+      display: block;
+      transition: 0.3s;
+    }
+    &:hover{
+      border-top:2px solid #a3c2d4;
+      border-bottom:2px solid #a3c2d4;
+      a{
+        color: #a3c2d4;
+      }
+    }
+  }
+
+}
+
 //////////////////////////////////////////
 .evolution-box{
   .double-box{
@@ -177,12 +179,11 @@
     position: relative;
   }
   p{
-    padding-top: 30px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
     max-width:715px;
-    margin: 0 15px;
+    padding: 30px 15px 0;
     text-align: left;
     position: relative;
     z-index: 3;
@@ -190,18 +191,17 @@
 }
 .video{
   text-align: center;
-  background-image: url(../img/the-city-london.png);
   background-position: 0 0;
-  -webkit-background-size: cover;
-  background-size: 100%;
   background-color: #fff;
   background-repeat: no-repeat;
+  padding: 60px 15px;
   .video-content{
     max-width: 980px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 50px;
+
   }
 }
 
@@ -211,24 +211,124 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  padding: 0;
+  overflow: hidden;
+
   &:before{
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.4);
+    z-index: 100;
+
   }
   .title-box{
     text-align: center;
     max-width: 690px;
     margin:0 10px;
     position: relative;
+    z-index: 101;
+    padding:120px 0;
   }
-  .mouse{
-    bottom: 50px;
-    text-align: center;
+}
+.video-bg{
+  position:absolute;
+  width: 100%;
+  height: 100%;
+
+
+  #bgvid {
     position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 100vw;
+    height: auto;
+
+
+  }
+}
+
+.mouse{
+  bottom: 50px;
+  padding-top: 5px;
+  text-align: center;
+  position: absolute;
+  width: 30px;
+  height: 50px;
+  border:3px solid #fff;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  z-index: 102;
+  div{
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin-top: 2px;
+    animation-name: op;
+    animation-iteration-count: infinite;
+    animation-duration:3s;
+    &:nth-child(1){
+
+    }
+    &:nth-child(2){
+      animation-delay: 0.2s;
+    }
+    &:nth-child(3){
+      animation-delay: 0.4s;
+    }
+
+  }
+
+}
+@keyframes op{
+  0%{
+opacity: 0;
+  }
+  15%{
+opacity: 1;
+  }
+  50%{
+    opacity: 0;
+  }
+  100%{
+opacity: 0 ;
+  }
+}
+.mobile{
+  display: none;
+.button-block{
+  display: none;
+}
+  .list{
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    border-top: 2px solid #a3c2d4;
+    flex-wrap: wrap;
+    li{
+      border-top: 2px solid transparent;
+      &:hover {
+        bborder-top: 2px solid transparent;
+        border-bottom: 2px solid #a3c2d4;
+      }
+      a{
+        line-height: 60px;
+      }
+    }
   }
 }
 @media (max-width: 1200px) {
+  .video-bg{
+    display: none;
+  }
   .header .head-section .total-block .main-box .list {
     margin-right: 15px;
+  }
+  .evolution-box .p700 {
+    padding: 40px 15px 30px;
   }
   .evolution-box .items {
     justify-content: space-around;
@@ -255,22 +355,37 @@
   .evolution-box .double-box, .header .head-section .total-block .main-box, .header .head-section .total-block .main-box .list, .title {
 
   }
+  .title {
+    height: auto;
+
+  }
+
+  .evolution-box .double-box .overlay {
+    margin-right: 0;
+  }
+  .header{
+    padding: 10px 0;
+  }
+  .header #nav-icon2 {
+    display: block;
+  }
   .header .head-section .total-block .main-box{
 .button-block{
   margin-right: 20px;
 }
-
   }
   .header .head-section .total-block .main-box .list {
-    position: absolute;
-    left: 0;
     display: none;
+
   }
     .evolution-box .overlay {
       margin-right: 0;
       width: 100%;
-      img{
+      img:nth-child(1){
         width: 100%;
+      }
+      img:nth-child(2){
+        width: 50%;
       }
     }
   .evolution-box .item:nth-child(even):after {
@@ -284,6 +399,13 @@
   #nav-icon2{
     display: block;
   }
+  .evolution-box .double-box{
+flex-direction: column;
+    .text-box{
+      order:-1;
+      margin-bottom: 30px;
+    }
+  }
 
 }
 @media (max-width: 768px) {
@@ -293,9 +415,45 @@
   .evolution-box .item:nth-child(odd):after {
     display: none;
   }
+   .mobile .list {
+    justify-content: space-around;
+  }
+  .title .title-box {
+    padding-top: 40px;
+  }
+}
+@media (max-width: 550px) {
+  .evolution-box .item:nth-child(even):after {
+    display: block;
+    width: 4px;
+    height: 30px;
+    left: 50%;
+    top: calc( 100% + 4px );
+  }
+  .evolution-box .item:nth-child(odd):after {
+    display: block;
+    width: 4px;
+    height: 30px;
+    left: 50%;
+    top:calc( 100% + 4px ) ;
+  }
+  .evolution-box .item:last-child:after {
+    display: none;
+  }
+
 }
 @media (max-width: 480px) {
-
+  .mobile {
+text-align: center;
+    .button-block {
+      display: block;
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+  }
+  .header .head-section .total-block .main-box .button-block {
+    display: none;
+  }
 }
 @media (max-width: 380px) {
 
