--- a/app/scss/_head.scss
+++ b/app/scss/_head.scss
@@ -4,7 +4,8 @@
   padding: 0;
   background-color: $blue;
   position: relative;
-  box-shadow: 0 0 25px rgba(34, 34, 34, 0.25);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.15);
+  z-index: 1;
   .head-section {
     .total-block{
       display: flex;
@@ -101,7 +102,6 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
   }
   .item{
@@ -172,7 +172,7 @@
     margin-top: 10px;
     width: 100%;
     img{
-      width: 100%;
+      width: 70%;
     }
   }
   h3{
@@ -407,6 +407,18 @@ flex-direction: column;
     }
   }
 
+}
+.under-footer{
+  background-color: #2e2e2e;
+  padding: 20px 15px;
+  p{
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+
+  }
 }
 @media (max-width: 768px) {
   .evolution-box .item:nth-child(even):after {
