--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
   background-color: $blue;
   color: #fff;
+  padding: 40px 0;
   .footer-box{
     display: flex;
     justify-content: space-between;
