--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,6 +5,9 @@
 @import "footer";
 @import "service";
 @import "cooperation";
+@import "catalog-products";
+@import "statistic";
+@import "product-cart";
 
 
 
