--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -44,6 +44,7 @@ h1{
   text-transform: uppercase;
   line-height: 72px;
   margin-bottom: 15px;
+  text-align: center;
 
 }
 h2{
@@ -67,6 +68,13 @@ h4{
   color: #ffffff;
   font-family: Roboto-Condensed;
   font-size: 48px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+h5{
+  color: #ffffff;
+  font-family: Roboto-Condensed;
+  font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -306,6 +314,10 @@ $color-button-hover: #f00;
 
 
 @media (max-width: 480px) {
+  h1{
+    line-height: 45px;
+    font-size: 50px;
+  }
   h3 {
     line-height: 45px;
     font-size: 40px;
@@ -319,4 +331,71 @@ $color-button-hover: #f00;
   section {
     padding: 40px 0;
   }
+}
+
+//////////////bread-crumbs///////////////
+.breadcrumbs-origin{
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+  color: #fff;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 100;
+
+  li{
+    position: relative;
+    padding: 0 20px 0 8px;
+    list-style: none;
+    margin-bottom: 8px;
+    &:before{
+      position: absolute;
+      content: "";
+      background-image: url(../img/arrow-black.png);
+      width: 12px;
+      height: 12px;
+      background-size:100%;
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      top: 6px;
+      right: 0;
+
+    }
+    a{
+      color: #fff;
+      font-family:Robot-bol;
+      transition: color 0.3s;
+
+      &:hover{
+        color: #a3c2d4;
+        border-bottom: 2px solid #a3c2d4;
+      }
+
+    }
+    &:last-child{
+
+      &:before{
+        display: none;
+      }
+      a{
+        color: #fff;
+        font-family:Robot-light, sans-serif;
+        cursor: text;
+
+        &:hover{
+          text-decoration:none;
+          border: none;
+        }
+
+      }
+    }
+  }
+}
+@media (max-width: 320px) {
+ body {
+zoom: 0.8;
+
+  }
+  
 }
